<resources>
    <string name="app_name" translatable="false">TodoList</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="alert_register_text">This email may be in use.</string>
    <string name="alert_login_text">Email or password is incorrect</string>
    <string name="alert_server_error">Internal Server Error</string>
    <string name="alert_missing_parameter">Missing Parameter email or password</string>
    <string name="edit_list">Edit List</string>
    <string name="add_list">Add List</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="deadline">Deadline</string>
    <string name="complated">Complated</string>
    <string name="logout">Logout</string>
    <string name="delete_all_list">Delete All List</string>
    <string name="fill_in_the_blanks">Fill in the blank</string>
    <string name="list_generated">List generated.</string>
    <string name="list_no_edited">List not edited!</string>
    <string name="list_deleted">List Deleted.</string>
    <string name="list_updated">List Updated.</string>
    <string name="list_all_deleted">Deleted All Lists</string>
    <string name="sort_list">Sort List</string>
    <string name="register">Register</string>
    <string name="dont_match_pass">Your passwords don\'t match.</string>
    <string name="open_login">Already a member? Click to login.</string>
    <string name="open_register">Not a member? Click here to register</string>

    <string name="edit_todo">Edit Todo</string>
    <string name="add_todo">Add Todo</string>
    <string name="delete_all_todo">Delete All Todo</string>
    <string name="todo_generated">Todo generated.</string>
    <string name="todo_no_edited">Todo not edited!</string>
    <string name="todo_deleted">Todo Deleted.</string>
    <string name="todo_updated">Todo Updated.</string>
    <string name="todo_all_deleted">Deleted All Todos</string>
    <string name="sort_todo">Sort Todo</string>
    <string name="deadline_asc_todo">Deadline Asc</string>
    <string name="deadline_desc_todo">Deadline Desc</string>
    <string name="status_asc_todo">Status Asc</string>
    <string name="status_desc_todo">Status Desc</string>
    <string name="name_asc_todo">Name Asc</string>
    <string name="name_desc_todo">Name Desc</string>
    <string name="create_asc_todo">Create Date Asc</string>
    <string name="create_desc_todo">Create Date Desc</string>
    <string name="share_todo">Share Todo List</string>
</resources>
