<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/delete_todo_menu"
        android:icon="@drawable/ic_delete"
        android:title="@string/delete_all_todo"
        app:showAsAction="never" />

    <item
        android:id="@+id/sort_todo_menu"
        android:icon="@drawable/ic_sort"
        android:title="@string/sort_todo"
        app:showAsAction="ifRoom">
        <menu>
            <item
                android:id="@+id/sort_deadline_asc_todo_menu"
                android:title="@string/deadline_asc_todo"/>

            <item
                android:id="@+id/sort_deadline_desc_todo_menu"
                android:title="@string/deadline_desc_todo"/>

            <item
                android:id="@+id/sort_create_asc_todo_menu"
                android:title="@string/create_asc_todo"/>

            <item
                android:id="@+id/sort_create_desc_todo_menu"
                android:title="@string/create_desc_todo"/>

            <item
                android:id="@+id/sort_status_asc_todo_menu"
                android:title="@string/status_asc_todo"/>

            <item
                android:id="@+id/sort_status_desc_todo_menu"
                android:title="@string/status_desc_todo"/>

            <item
                android:id="@+id/sort_name_asc_todo_menu"
                android:title="@string/name_asc_todo"/>

            <item
                android:id="@+id/sort_name_desc_todo_menu"
                android:title="@string/name_desc_todo"/>
        </menu>
    </item>
</menu>